--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
+    environment:
+      - DJANGO_SETTINGS_MODULE=payment_system.settings
     volumes:
       - .:/app
     ports:
@@ -12,3 +14,5 @@ services:
       - redis
   redis:
     image: "redis:alpine"
+    ports:
+      - "6379:6379"
